# hawk

./: Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2024-06-17-210257_politas/: down.sql  up.sql
migrations/2024-07-26-085635_fix_column_name_typo/: down.sql  up.sql
migrations/2024-07-26-144813_update_user_reviews_reference/: down.sql  up.sql
migrations/2024-07-30-085226_add_title_and_incease_casde_description_len/: down.sql  up.sql
migrations/2024-07-30-135701_add_upvotes_downvotes/: down.sql  up.sql
migrations/2024-07-31-123147_add_link_column/: down.sql  up.sql
migrations/2024-08-11-134054_add_revoew_chars/: down.sql
migrations/2024-08-14-175102_adjust_text_char/: down.sql  up.sql
migrations/2024-08-14-180057_adjust_case_text_chars/: down.sql  up.sql
migrations/2024-08-14-191824_add_sex_n_age/: down.sql  up.sql
migrations/2024-08-14-202604_edit_age_to_year_of_birth/: down.sql  up.sql
src/: main.rs  upload.rs  utils.rs
src/corruption_cases/: main.rs
src/models/: cases.rs  mod.rs  politicians.rs  schema.rs  user_reviews.rs
src/politicians/: main.rs
src/repository/: database.rs
src/user_reviews/: main.rs
src/votes/: main.rs
