[package]
name = "politas"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenv = "0.15.0"
dotenvy = "0.15"
env_logger = "0.11.3"
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive"] }
url = "2.5.2"
actix-governor = "0.5.0"
phf = {version = "0.11",features = ["macros"]}
actix-cors = "0.7.0"
